# agents-status

./: .gitignore  AGENTS.md  README.md  SYSTEM_DESIGN.md  install.sh
advanced-wrappers/cursor-agent/: Cargo.toml  README.md  config.toml.example
advanced-wrappers/cursor-agent/src/: config.rs  main.rs
core/: README.md  config.example.toml  ensure-running  helpers.sh  pyproject.toml  restart  server.py
core/agents_status.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/superpowers/plans/: 2026-07-09-statusbar-standardization.md
docs/superpowers/specs/: 2026-07-09-statusbar-standardization-design.md
hooks/claude/: README.md  hook-finish  hook-perm-req  hook-prompt-start  hook-session-start  hook-session-stop  hook-tool-done
hooks/codex/: README.md  hook-finish  hook-perm-req  hook-prompt-start
hooks/cursor/: README.md  hook-after-shell  hook-agent-activity  hook-finish  hook-perm-req  hook-prompt-start  hook-session-end  hook-session-start  hook-subagent-start  hook-subagent-stop
simple-wrappers/: README.md  codex  cursor-agent
statusbar/: AGENTS.md  README.md  TODO.md  run.py
statusbar/aerospace/: workspaces.py
statusbar/common/: __init__.py  config.py  naming.py  tmux.py  types.py  workspaces.py
statusbar/hyprland/: bar.py  workspaces.py
statusbar/sketchybar/: bar.py  plugin.sh  update-ws-cache.sh
tmux/: README.md  agents-status.tmux
tmux/scripts/: status-icon.sh
