[project]
name = "agents-status"
version = "0.1.0"
description = "Agent status aggregation server"
requires-python = ">=3.9"
dependencies = [
    "tomli>=1.0; python_version < '3.11'",
]

[project.scripts]
agents-status-server = "server:main"

[tool.setuptools]
py-modules = ["server"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
